# backend

./: .gitignore  pyproject.toml
server/: app_config.py  main.py
server/endpoints/: __init__.py  app.py  content_preparing.py  session.py  sqlite.py
server/middleware/: __init__.py  check_table_exists.py  sqlite_auth.py
server/session_auth/: __init__.py  connection.py  crud.py  sa_types.py  token_generator.py
server/sqlite3_utils/: __init__.py  check_is_db.py
server/tempfiles/: git_see.txt
server/tempfiles_api/: __init__.py  aiosqlite_engine.py  crud.py  utils.py
